# space_battle

./: .gitignore  Cargo.toml
assets/models/: background_1.glb  ship.glb
assets/models/space_ship/: scene.gltf
src/: camera.rs  components.rs  main.rs  physics.rs  ship.rs  ui.rs
src/components/: defer_collider_loader.rs  max_torque.rs  mod.rs  orientation_regulator.rs  player_ship.rs  target.rs  thrusters.rs
src/ui/: physics_debug_panel.rs
