[package]
name = "space_battle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["jpeg"] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }
#bevy_hanabi = "0.7"
bevy_rapier3d = { version = "0.22", features = ["parallel", "simd-stable"] }
rapier3d = { version = "0.17", features = ["profiler"] }
serde = { version = "1", features = ["derive"] }
