[package]
name = "space_battle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["jpeg"] }
bevy_editor_pls = "0.6"
bevy_hanabi = "0.8"
bevy_rapier3d = { version = "0.23", features = ["parallel", "simd-stable"] }
rapier3d = { version = "0.17", features = ["profiler"] }
serde = { version = "1", features = ["derive"] }
